--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(GBEMU)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp CPU.cpp CPU.h)
+set(SOURCE_FILES main.cpp CPU.h)
 set(SOURCE_FILES main.cpp MMU.h definitions.h)
 
 add_executable(GBEMU ${SOURCE_FILES})
